--- a/templates/dashboard/components/sidebar.html
+++ b/templates/dashboard/components/sidebar.html
@@ -101,7 +101,7 @@
             alt="Configure Requests Icon"
             class="w-5 h-5"
           />
-          <span class="font-medium">Configure Requests</span>
+          <span class="font-medium">Predefined Requests</span>
         </a>
         {% endif %}
         
